--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
       </section>
       <section id="result" class="mx-auto my-5 py-5 px-3">
         <h1>당신의 결과는?!</h1>
-        <div class="resultname"></div>
+        <div class="resultLang"></div>
         <div
           id="resultImg"
           class="my-3 col-lg-6 col-md-8 col-sm-10 col- mx-auto"
         ></div>
-        <div class="resultDesc"></div>
+        <div class="langInfo"></div>
+        <div class="bookInfo"></div>
+        <div class="lectureInfo"></div>
+        <div class="negativeLang"></div>
         <button type="button" class="kakao mt-3 py-2 px-3">공유하기</button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
