--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="main" class="mx-auto my-5 py-5 px-3">
         <h1>나와 가장 잘 어울리는 개발 언어는?</h1>
         <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
-          <img src="./img/main.png" alt="mainImage" class="img-fluid" />
+          <img src="./img/main.gif" alt="mainImage" class="img-fluid" />
         </div>
         <p>
           나와 어울리는 개발 언어를 찾아주는 사이트입니다! <br />
