--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
     <link rel="stylesheet" href="./css/result.css" />
     <link rel="stylesheet" href="./css/animation.css" />
     <!-- 폰트 링크 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css"
     />
   </head>
   <body>
@@ -36,11 +34,7 @@
           나와 어울리는 개발 언어를 찾아주는 사이트입니다! <br />
           아래 시작하기 버튼을 눌러 시작해 주세요:)
         </p>
-        <button
-          type="button"
-          class="btn btn-outline-danger mt-3"
-          onclick="js:begin()"
-        >
+        <button type="button" class="start_btn mt-3" onclick="js:begin()">
           START
         </button>
       </section>
