--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <!-- 부트스트랩 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+
     <!-- CSS 폴더 -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/main.css" />
@@ -25,38 +19,35 @@
   </head>
   <body>
     <div class="container">
-      <section id="main" class="mx-auto my-5 py-5 px-3">
+      <section id="main">
         <h1>나와 가장 잘 어울리는 개발 언어는?</h1>
-        <div class="col-lg-6 col-md-8 col-sm-10 col- mx-auto">
-          <img src="./img/main.gif" alt="mainImage" class="img-fluid" />
+        <div>
+          <img src="./img/main.gif" alt="mainImage" class="main_img" />
         </div>
         <p>
           나와 어울리는 개발 언어를 찾아주는 사이트입니다! <br />
           아래 시작하기 버튼을 눌러 시작해 주세요:)
         </p>
-        <button type="button" class="start_btn mt-3" onclick="js:begin()">
+        <button type="button" class="start_btn" onclick="js:begin()">
           START
         </button>
       </section>
       <section id="qna">
-        <div class="status mx-auto mt-5">
+        <div class="status">
           <div class="statusBar"></div>
         </div>
-        <div class="qBox my-5 py-3 mx-auto"></div>
+        <div class="qBox"></div>
         <div class="answerBox"></div>
       </section>
-      <section id="result" class="mx-auto my-5 py-5 px-3">
+      <section id="result">
         <h1>당신의 결과는?!</h1>
         <div class="resultLang"></div>
-        <div
-          id="resultImg"
-          class="my-3 col-lg-6 col-md-8 col-sm-10 col- mx-auto"
-        ></div>
+        <div id="resultImg"></div>
         <div class="langInfo"></div>
         <div class="bookInfo"></div>
         <div class="lectureInfo"></div>
         <div class="negativeLang"></div>
-        <button type="button" class="kakao mt-3 py-2 px-3">공유하기</button>
+        <button type="button" class="kakao">카카오톡</button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
