--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
         <div class="bookInfo"></div>
         <div class="lectureInfo"></div>
         <div class="negativeLang"></div>
-        <button type="button" class="kakao">다시하기</button>
+        <button
+          type="button"
+          class="return_btn"
+          onclick="window.location.reload()"
+        >
+          다시하기
+        </button>
         <button type="button" class="kakao">공유하기</button>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
