--- a/index.html
+++ b/index.html
@@ -83,36 +83,51 @@
         </div>
       </section>
       <section id="qna">
-        <div class="status_box">
-          <div class="status">
-            <div class="statusBar"></div>
+        <div class="contents">
+          <div class="status_box">
+            <div class="status">
+              <div class="statusBar"></div>
+            </div>
           </div>
-        </div>
 
-        <div class="qBox"></div>
-        <div class="answerBox"></div>
+          <div class="qBox"></div>
+          <div class="answerBox"></div>
+        </div>
       </section>
       <section id="loading">
         <h1>Loading . . .</h1>
       </section>
       <section id="result">
-        <h1>당신의 결과는?!</h1>
-        <div class="resultLang"></div>
-        <div id="resultImg"></div>
-        <div class="langInfo"></div>
-        <div class="bookInfo"></div>
-        <div class="lectureInfo"></div>
-        <div class="negativeLang"></div>
-        <button
-          type="button"
-          class="return_btn"
-          onclick="window.location.reload()"
-        >
-          다시하기
-        </button>
-        <button type="button" class="kakao" onclick="btn()">공유하기</button>
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div id="bttn" class="addthis_inline_share_toolbox"></div>
+        <div class="result_contents">
+          <h1>당신의 결과는?!</h1>
+          <div class="resultLang"></div>
+          <div id="resultImg"></div>
+          <div class="langInfo"></div>
+          <div class="bookInfo"></div>
+          <div class="lectureInfo"></div>
+          <div class="negativeLang"></div>
+          <button
+            type="button"
+            class="return_btn"
+            onclick="window.location.reload()"
+          >
+            다시하기
+          </button>
+          <button type="button" class="kakao" onclick="btn()">공유하기</button>
+          <!-- Go to www.addthis.com/dashboard to customize your tools -->
+          <div id="bttn" class="addthis_inline_share_toolbox"></div>
+        </div>
+
+        <div class="footer">
+          * 본 심리테스트는 오즈코딩스쿨 린스타트업 맞춤형 Serverless MVP 개발
+          전문가 양성 과정 1기 김남욱, 박정건, 김수람 팀이 2일 만에 구현한
+          결과물입니다.
+        </div>
+        <div class="footer_min">
+          * 본 심리테스트는 오즈코딩스쿨 린스타트업 맞춤형<br />
+          Serverless MVP 개발 전문가 양성 과정 1기 <br />김남욱, 박정건, 김수람
+          팀이 2일 만에 구현한 결과물입니다.
+        </div>
       </section>
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
