--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
       <section id="result">
         <div class="result_contents">
           <h1>당신의 결과는?!</h1>
-          <div class="resultLang"></div>
+          <div class="resultLang result_name"></div>
           <div id="resultImg"></div>
-          <div class="langInfo"></div>
-          <div class="bookInfo"></div>
-          <div class="lectureInfo"></div>
-          <div class="negativeLang"></div>
+          <div class="langInfo result_text"></div>
+          <div class="bookInfo result_text"></div>
+          <div class="lectureInfo result_text"></div>
+          <div class="negativeLang result_negative"></div>
           <button
             type="button"
             class="return_btn"
