--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             START
           </button>
           <br />
+          <div class="countt"></div>
           <button
             type="button"
             class="page_btn"
@@ -99,11 +100,11 @@
       </section>
       <section id="result">
         <div class="result_contents">
-          <h1>당신의 결과는?!</h1>
+          <h1 class>당신의 결과는?!</h1>
           <div class="resultLang result_name"></div>
           <div id="resultImg"></div>
           <div class="langInfo result_text"></div>
-          <div class="bookInfo result_text"></div>
+          <div class="bookInfo result_text result_height"></div>
           <div class="lectureInfo result_text"></div>
           <div class="negativeLang result_negative"></div>
           <button
@@ -111,8 +112,8 @@
             class="return_btn"
             onclick="window.location.reload()"
           >
-            다시하기
-          </button>
+            다시하기</button
+          >&nbsp;&nbsp;&nbsp;&nbsp;
           <button type="button" class="kakao" onclick="btn()">공유하기</button>
           <!-- Go to www.addthis.com/dashboard to customize your tools -->
           <div id="bttn" class="addthis_inline_share_toolbox"></div>
@@ -132,5 +133,117 @@
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
     </div>
+    <!-- 파이어베이스 db 연동 -->
+    <div class="countt"></div>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-analytics.js";
+      import {
+        getFirestore,
+        doc,
+        setDoc,
+        getDoc,
+      } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
+
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDpQPS0sYzTlX24PKS7fkEVqJiWsoR6qCY",
+        authDomain: "language-test-b280a.firebaseapp.com",
+        databaseURL:
+          "https://language-test-b280a-default-rtdb.asia-southeast1.firebasedatabase.app/",
+        projectId: "language-test-b280a",
+        storageBucket: "language-test-b280a.appspot.com",
+        messagingSenderId: "168120529834",
+        appId: "1:168120529834:web:95dd0283d82d2e351331d3",
+        measurementId: "G-Y5K4DDZ8RV",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const db = getFirestore(app);
+
+      const docRef = doc(db, "counts", "counts");
+      const docSnap = await getDoc(docRef);
+
+      if (docSnap.exists()) {
+        const button = document.querySelector(".start_btn");
+        let cnt = docSnap.data().count;
+        function clickCount() {
+          cnt += 1;
+          setDoc(doc(db, "counts", "counts"), {
+            count: cnt,
+          });
+        }
+        button.addEventListener("click", clickCount);
+
+        const countt = document.querySelector(".countt");
+        countt.innerHTML = "총 이용자 수는 : " + cnt;
+      } else {
+        // doc.data() will be undefined in this case
+        console.log("No such document!");
+      }
+    </script>
+
+    <!--카카오톡 공유하기-->
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
+      integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      Kakao.init("9e59171c07668a355be14dc952c96cb9"); // 사용하려는 앱의 JavaScript 키 입력
+    </script>
+
+    <a id="kakaotalk-sharing-btn" href="javascript:;">
+      <img
+        src="https://developers.kakao.com/assets/img/about/logos/kakaotalksharing/kakaotalk_sharing_btn_medium.png"
+        alt="카카오톡 공유 보내기 버튼"
+      />
+    </a>
+
+    <script>
+      Kakao.Share.createDefaultButton({
+        container: "#kakaotalk-sharing-btn",
+        objectType: "feed",
+        content: {
+          title: "딸기 치즈 케익",
+          description: "#케익 #딸기 #삼평동 #카페 #분위기 #소개팅",
+          imageUrl:
+            "http://k.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png",
+          link: {
+            // [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
+            mobileWebUrl: "https://developers.kakao.com",
+            webUrl: "https://developers.kakao.com",
+          },
+        },
+        social: {
+          likeCount: 286,
+          commentCount: 45,
+          sharedCount: 845,
+        },
+        buttons: [
+          {
+            title: "웹으로 보기",
+            link: {
+              mobileWebUrl: "https://developers.kakao.com",
+              webUrl: "https://developers.kakao.com",
+            },
+          },
+          {
+            title: "앱으로 보기",
+            link: {
+              mobileWebUrl: "https://developers.kakao.com",
+              webUrl: "https://developers.kakao.com",
+            },
+          },
+        ],
+      });
+    </script>
   </body>
 </html>
