--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
       <script src="./js/data.js" charset="utf-8"></script>
       <script src="./js/start.js" charset="utf-8"></script>
     </div>
-
     <!-- 파이어베이스 db 연동 -->
-
+    <div class="countt"></div>
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
@@ -191,7 +190,7 @@
       }
     </script>
 
-    <!--카카오톡 공유하기 start-->
+    <!--카카오톡 공유하기-->
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
       integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx"
@@ -207,9 +206,43 @@
         alt="카카오톡 공유 보내기 버튼"
       />
     </a>
-    <!--카카오톡 공유하기 end1-->
 
-
-
+    <script>
+      Kakao.Share.createDefaultButton({
+        container: "#kakaotalk-sharing-btn",
+        objectType: "feed",
+        content: {
+          title: "나와 가장 잘 어울리는 개발 언어는?",
+          description: "#개발 #코딩 #mbti #심리테스트 #개발언어 #개발자",
+          imageUrl: "https://psy-project.netlify.app/img/kakao_image.png",
+          link: {
+            // [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
+            mobileWebUrl: "https://developers.kakao.com",
+            webUrl: "https://developers.kakao.com",
+          },
+        },
+        social: {
+          likeCount: 286,
+          commentCount: 45,
+          sharedCount: 845,
+        },
+        buttons: [
+          {
+            title: "웹으로 보기",
+            link: {
+              mobileWebUrl: "https://developers.kakao.com",
+              webUrl: "https://developers.kakao.com",
+            },
+          },
+          {
+            title: "앱으로 보기",
+            link: {
+              mobileWebUrl: "https://developers.kakao.com",
+              webUrl: "https://developers.kakao.com",
+            },
+          },
+        ],
+      });
+    </script>
   </body>
 </html>
